force-app/main/default/objects/Krow__Invoice_Fixed_Fee_Item__c/Krow__Invoice_Fixed_Fee_Item__c.object-meta.xml
<CustomObject>
    <label>Invoice Fixed-Fee Item</label>
    <nameField>
        <displayFormat>IFFI-{0000}</displayFormat>
        <label>Invoice Fixed-Fee Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Fixed-Fee Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>