force-app/main/default/objects/Krow__Invoice_Fixed_Fee_Item__c/fields/Krow__Invoice__c.field-meta.xml
<CustomField>
    <fullName>Krow__Invoice__c</fullName>
    <label>Invoice</label>
    <referenceTo>Krow__Invoice__c</referenceTo>
    <relationshipLabel>Invoice Fixed-Fee Items</relationshipLabel>
    <relationshipName>Invoice_Fixed_Fee_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>