force-app/main/default/objects/Krow__Invoice_Fixed_Fee_Item__c/fields/Krow__Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Krow__Item_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item Name</label>
    <referenceTo>Krow__Task__c</referenceTo>
    <relationshipLabel>Invoice Fixed-Fee Items</relationshipLabel>
    <relationshipName>Invoice_Fixed_Fee_Items</relationshipName>
    <type>Lookup</type>
</CustomField>