force-app/main/default/objects/Krow__Invoice_Fixed_Fee_Item__c/fields/Krow__Markup__c.field-meta.xml
<CustomField>
    <fullName>Krow__Markup__c</fullName>
    <label>Markup %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>