force-app/main/default/objects/Krow__Invoice_Fixed_Fee_Item__c/fields/Krow__Notes__c.field-meta.xml
<CustomField>
    <fullName>Krow__Notes__c</fullName>
    <label>Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>