force-app/main/default/objects/Krow__Invoice_Fixed_Fee_Item__c/fields/Krow__Product__c.field-meta.xml
<CustomField>
    <fullName>Krow__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Invoice Fixed-Fee Items</relationshipLabel>
    <relationshipName>Invoice_Fixed_Fee_Items</relationshipName>
    <type>Lookup</type>
</CustomField>