force-app/main/default/objects/Krow__Invoice_Fixed_Fee_Item__c/fields/Krow__Project_Billing_Line__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Billing_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Billing Line</label>
    <referenceTo>Krow__Project_Billing_Line__c</referenceTo>
    <relationshipLabel>Invoice Fixed-Fee Items</relationshipLabel>
    <relationshipName>Invoice_Fixed_Fee_Items</relationshipName>
    <type>Lookup</type>
</CustomField>