force-app/main/default/objects/Krow__Invoice_Fixed_Fee_Item__c/fields/Krow__Sales_Price_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Krow__Sales_Price_Unit_Price__c</fullName>
    <label>Sales Price (Unit Price)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>