force-app/main/default/objects/Krow__Invoice_Fixed_Fee_Item__c/fields/Krow__Tax__c.field-meta.xml
<CustomField>
    <fullName>Krow__Tax__c</fullName>
    <label>Tax %</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>