force-app/main/default/objects/Krow__Invoice_Fixed_Fee_Item__c/fields/Krow__Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Tax_Amount__c</fullName>
    <formula>( Krow__Amount__c *  Krow__Tax__c ) + (  Krow__Amount__c *  Krow__Invoice__r.Krow__Tax__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>